# individuals-api/src/main/java/com/k3sh/bankapp/rest/TransactionControllerV1.java
@@ -1,0 +1,12 @@
+package com.k3sh.bankapp.rest;
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("api/v1/transactions")
+@RequiredArgsConstructor
+public class TransactionControllerV1 {
+
+}
